# land

./: .gitignore  .gitmodules  .shellcheckrc  CLAUDE.md  aliases.linux.sh  aliases.mac.sh  aliases.sh  aliases.win.sh  async.zsh  bashscripts.code-workspace  convert.sh  cursor-ide.py  cursor-ide.zsh  cursor.zsh  docker.sh  environment.sh  ffmpeg.sh  fs.sh  fzf.sh  gh.zsh  ghcli.sh  git.sh  google.zsh  hclean  herdr.zsh  history.sh  init.sh  inspect.sh  keybinds.zsh  land.code-workspace  launch.sh  llm.zsh  log.sh  misc.linux.sh  misc.sh  nav.sh  notify.linux.sh  notify.mac.sh  notify.sh  paths.sh  (+22 more)
completions/: ._alembic  ._datamodel-codegen  ._docker  ._jest  ._proc  ._pytest  ._stern  ._yt-dlp  ._zsh_advanced_history  COMPLETIONS.md  _agy  _async  _ccc  _ch  _claude  _codanna  _codex  _fzf  _gemini  _ghcli  _git  _herdr  _inspect  _kitty  _llm  _moshi  _nav  _openclaw  _opencode  _openfang  _pi  _pretty  _python  _ruff  _scraping  _skills  _str  _tools  _util  _wacli
git-related/: getforks.py
hooks/: .precmd.zsh.ignored  chpwd.zsh  precmd.zsh
meta/: completions-doctor  llm-completions-design.md
python-related/: pip_download.py  pypi_publish.py
raycast-scripts/: script-command.sh
standalone/: alpine.sh  analyze-disk.zsh  bfind.sh  compare.sh  deployme.sh  download-docs.zsh  ffmpeg-remove-silence.zsh  find.sh  jenkins.ipynb  jenkins.py  jira.sh  kubernetes.sh  levenstein.zsh  linear.zsh  mansplit.awk  mongo.js  nativefy.sh  omz-post-install.sh  rebuild-zwc.zsh  sgpt.zsh  yt-dlp.zsh  yt_dlp_xml_to_md.py
tests/: args_test.bats  inspect_test.zunit  pyfns_test.bats  pyfns_test_2_fullnames  skills_test.zunit  str_test.zunit  zsh_advanced_history.zunit
tests/data/: isort-help  isort-help-expected  str_dedent_heb_characters.json
unused/: 9xbuddy-scraper.js  args.sh  bitbucket.sh  download_stream_mp.py  download_subtitles.sh  report_times.sh
